# tensat

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  assrts.rs  build.rs  converted.txt  converted_multi.txt  efficient_vs_vanilla.sh  exp_to_run.sh  get_time.sh  greedy_vs_ilp.sh  multi_cleaned.txt  multi_rules.txt  op_table.txt  orig.model  orig.onnx  out  real_vs_int.sh  records_and_issues.txt  run.sh  run_exp_main.sh  save_models.sh  single_rules.txt  taso_rules.txt  test_exp.sh  test_graph_l1.txt  test_graph_l2.txt  test_graph_l3.txt  verify.py  wrapper.h
analysis/: stats.py
docker/: Dockerfile  run_docker.sh
extractor/: extract.py
model/: bts.model  inceptionv3.model  mobilenetv2.model  squeezenet.model  vgg.model
no_release/: bert_1_stats.txt  nasneta_1_stats.txt  nasrnn_1_stats.txt  resnext50_1_stats.txt
src/: axioms.rs  benchnet.rs  bert.rs  equation.pest  inceptionv3.rs  input.rs  lib.rs  main.rs  mobilenetv2.rs  model.rs  nasnet_a.rs  nasneta.rs  nasrnn.rs  optimize.rs  parse.rs  resnet50.rs  resnext50.rs  rewrites.rs  squeezenet.rs  testnet.rs  vgg.rs
tests/: parse.rs
with_release/: bert_1_stats.txt  nasneta_1_stats.txt  nasrnn_1_stats.txt  resnext50_1_stats.txt
