[package]
name = "tamago"
version = "0.1.0"
authors = ["Remy Wang <remywang@uw.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version =  "0.7", default_features = false }
pest = "2.0"
pest_derive = "2.0"
rand = "0.7"
clap = "2.33"
itertools = "0.9"
arrayvec = "0.5.1"
serde_json = "1.0"
serde = "1.0"

[dependencies.egg]
path = "../egg"

#git = "https://github.com/mwillsey/egg"
#rev = "986bff5c7d2e050e9aa980671c4c7d971c07da6f"

[build-dependencies]
bindgen = "0.54.0"
