[package]
name = "tensat"
version = "0.1.0"
authors = [
  "Remy Wang <remywang@uw.edu>",
  "Yichen Yang <yicheny@mit.edu>",
  "Max Willsey <me@mwillsey.com",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version =  "0.7", default_features = false }
pest = "2.0"
pest_derive = "2.0"
rand = "0.7"
clap = "2.33"
itertools = "0.9"
arrayvec = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.egg]
# path = "../egg"
git = "https://github.com/egraphs-good/egg"
rev = "665926938d11f72f16e41dba8d53c307965d838c" # relational

[build-dependencies]
bindgen = "0.54.0"
cmake = "0.1"
